--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "del": "~2.2.2",
     "gulp": "github:gulpjs/gulp#4.0",
     "gulp-autoprefixer": "~3.1.1",
+    "gulp-cache": "^0.4.6",
     "gulp-concat": "^2.6.1",
     "gulp-concat-css": "~2.3.0",
     "gulp-css-unit": "^1.2.2",
     "gulp-csso": "~2.0.0",
     "gulp-eslint": "~3.0.1",
     "gulp-if": "^2.0.2",
+    "gulp-imagemin": "^3.2.0",
     "gulp-load-plugins": "~1.5.0",
     "gulp-notify": "~3.0.0",
     "gulp-pug": "~3.2.0",
